--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@dotlottie/react-player": "^1.2.1",
+    "@emotion/is-prop-valid": "^1.3.1",
     "@supabase/auth-helpers-nextjs": "^0.7.4",
     "@tailwindcss/forms": "^0.5.5",
     "@tailwindcss/typography": "^0.5.9",
@@ -19,6 +20,7 @@
     "date-fns": "^2.30.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "framer-motion": "^12.23.12",
     "github-slugger": "^2.0.0",
     "next": "13.5.4",
     "next-contentlayer": "^0.3.4",
